config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tennis-booking
  labels:
    name: tennis-booking
    environment: production
